# Chalice-CLI

./: .chalice  .env.example  .gitignore  INTRODUCTION.md  README.md  ROADMAP.md  chalice_enhanced.py  chatbot.py  pyproject.toml
agents/: __init__.py
agents/builtin/: api_architect.md  data_analyst.md  database_expert.md  devops_engineer.md  performance_optimizer.md  security_auditor.md  testing_specialist.md  ui_ux_designer.md
agents/core/: __init__.py  agent.py
agents/marketplace/: README.md  __init__.py  cli.py  marketplace.py
analytics/: __init__.py  tracker.py
chalice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: agents.yaml  tools.yaml
docs/: MCP_ARCHITECTURE.md  MULTIMODAL.md
examples/: mcp_usage.py  multimodal_usage.py
mcp/: __init__.py  client.py  generator.py
mcp/servers/: __init__.py  api.py  execution.py  filesystem.py  git.py  multimodal.py  system.py
memory/: __init__.py  vector_store.py
offline/: __init__.py  lmstudio_provider.py  ollama_provider.py
plugins/core/: __init__.py  manager.py  plugin.py
prompts/: coding.md  debugging.md  planning.md  reviewing.md  system.md  task_creation.md
servers/: README.md  __init__.py
servers/api/: __init__.py  graphql.py  http.py  webhook.py
servers/execution/: __init__.py  bash.py  javascript.py  python.py
servers/filesystem/: __init__.py  create_directory.py  delete_path.py  file_exists.py  (+4 more)
tests/: __init__.py  test_agents.py  test_tools.py
tools/: __init__.py  api.py  base.py  execution.py  git.py  system.py
workflows/: __init__.py  engine.py
(+18 files in other folders)
